Overhauled serializer API to make it much easier to write serializers. Added some JDK serializers. Add immutable list serializer. Allow pluggable constructors, add multimap serializers. Add unsigned serializers.